Revert "[native] Silence warnings from the JVM that runs the Kotlin native compiler"
The flag is not supported in older JDKs, the fix needs to be reworked.

This reverts commit 14655d43aba582132530f0ca406d48915366a7fe.